--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -78,3 +78,6 @@ $autosuggest-entry-background-hover: rgb(37, 41, 56);
 $autosuggest-entry-background-hover: rgb(46, 51, 70);
 $autosuggest-entry-color-hover: #e2e2e2;
 $autosuggest-entry-handle-color-hover: #ffffff;
+
+$scrollbar-color: #08090d;
+$scrollbar-color-thumb: lighten($color-primary, 5);
